<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.room.view.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.room.view.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_equipment"
        android:name="com.example.room.view.fragment.EquipmentFragment"
        android:label="@string/title_equipment"
        tools:layout="@layout/fragment_equipment" />

    <fragment
        android:id="@+id/navigation_reserve"
        android:name="com.example.room.view.fragment.ReservationFragment"
        android:label="@string/title_reserve"
        tools:layout="@layout/fragment_reserve" />
</navigation>